fix(calendar): Hide clipboard selection, when when collapse metier block

--- a/src/app/activity-calendar/calendar/calendar.component.scss
+++ b/src/app/activity-calendar/calendar/calendar.component.scss
@@ -3,10 +3,6 @@
   --mat-cell-resizable-handle-size: 5px;
   --mat-cell-resizable-handle-color-hover: var(--ion-color-secondary);
 }
-.no-scroll {
-  height: initial;
-  overflow: initial;
-}
 .mat-accordion {
   --expansion-panel-padding: 0;
   .mat-expansion-panel-header {
